--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "compression": "^1.7.4",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "express-msgpack": "^5.1.2"
   }
 }
