--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "compression": "^1.7.4",
     "express": "^4.21.0",
-    "express-msgpack": "^5.1.2"
+    "express-msgpack": "^5.1.2",
+    "protobufjs": "^7.4.0"
   }
 }
